<resources>
    <string name="app_name">百盛仓</string>
    <string name="navigation_vote">预售</string>
    <string name="navigation_vip">福利</string>
    <string name="navigation_find">发现</string>
    <string name="navigation_grab">抢购</string>
    <string name="navigation_mall">精选</string>
    <string name="navigation_cart">购物车</string>
    <string name="navigation_my">我的</string>
    <string name="logistics_info">物流信息</string>
    <string name="demo">物流信息</string>
    <string name="login">登录</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="setting">设置</string>
    <string name="aboutme">关于我们</string>
    <string name="past_vote">往期投票</string>
    <string name="past_vote2">权益</string>
    <string name="user_info">个人资料</string>
    <string name="my_address">收货地址</string>
    <string name="real_name">实名认证</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods_detail_vip">礼包商品详情</string>
    <string name="mall_goods">各地好货</string>
    <string name="mall_left">商城左侧模块详情页</string>

    <string name="comm_price_format">¥ %s</string>
    <string name="product_detail_sku_stock">(库存:%1$s)</string>
    <string name="search">搜索</string>
    <string name="feilei">分类</string>
    <string name="safe">账号与安全</string>
    <string name="set_two_pwd">设置二级密码</string>
    <string name="web_view" >网页</string>
    <string name="insert_address">添加编辑地址</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_fans">我的粉丝</string>
    <string name="order_detail">订单详情</string>
    <string name="poster">海报</string>
    <string name="my_order">我的订单</string>
    <string name="order_xiadan">下单</string>
    <string name="fu_order_xiadan">福利商品下单</string>
    <string name="vip_centenr">会员中心</string>
    <string name="coin_detail">仓币明细</string>
    <string name="redpack_detail">红包明细</string>
    <string name="yuer_detail">余额</string>
    <string name="agent_center">代理中心</string>
    <string name="with_draw">余额提现</string>
    <string name="red_with_draw">红包余额提现</string>
    <string name="agent_rules">代理规则22</string>
    <string name="agent_open">代理开通</string>
    <string name="bind_accont">绑定账户</string>
    <string name="feed_back">意见反馈</string>
    <string name="agent_buy_vip">代理购买会员</string>
    <string name="agent_help_vip">协助注册</string>
    <string name="search_result">搜索结果</string>
    <string name="agent_out">退出代理</string>
    <string name="message">消息</string>
    <string name="message_list">消息列表</string>

    <string name="custom_content_text">进度:%d%%/100%%</string>
    <string name="update_title">是否更新新版本</string>
    <string name="shape_friends">分享页</string>
    <string name="share_one">点击按钮\n分享链接</string>
    <string name="share_two">好友下载\n登录APP</string>
    <string name="share_three">好友购买VIP\n   福利到账</string>
    <string name="title_activity_third_push_notice">第三方辅助推送</string>
    <string name="money">金&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;额：</string>
    <string name="account_type">到账方式：</string>
    <string name="real_name_do">实名认证申请</string>
    <string name="agent_open_sm">欢迎注册百盛仓商城代理，代理人需为符合《中华人民共和国民法通则》中的合法法人，具备但不仅限于经营许可证、企业营业执照。代理相关权益添加以下官方微信咨询。</string>
    <string name="agent_register_sm">协助注册会员以手机号码作为唯一账号，注册时需核对确认无误。注册成功后用户可自行登陆领取会员礼包激活账号</string>
    <string name="shangjia_join">商家入驻</string>
    <string name="tixian_guize">1、每日可提现一次，每次最低20元，最高5000元\n2、本日提现次日发放。\n3、提现手续费为3%代扣\n4、提现方式为微信和支付宝，提现须通过实名认证\n5、普通会员最高提现限额200元，升级VIP会员后可全部提现</string>
    <string name="tixian_shuom">1、代理必须严格遵守国家相关法律法规及百盛仓相关规定条约。\n2、百盛仓保留随时修改、变更或附加条款的权利。\n3、如有疑问可致电百盛仓客服电话：\n   400-665-0118（工作日9:00-18:00）"</string>
    <!-- 分享成功失败的 Toast -->
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="goods_hahuo">各地好货</string>
    <string name="look_image_video">看大图视频</string>
    <string name="native_goods">商品详情原生</string>
    <string name="welfate_native_goods">福利商品详情原生</string>
    <string name="agent_des">1、必须成为百盛仓VIP会员才有资格升级金牌代理。\n2、金牌代理资格开通成功后长期有效。</string>
    <string name="sort_search">分类搜索</string>
    <string name="sort_detail">分类详情</string>

    <string name="hahaha">AAAAAAAAAAA\nBBBBBBBBBBBBBBBBBBBBB</string>


</resources>
