<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<item-->
        <!--android:id="@+id/navigation_vote"-->
        <!--android:icon="@mipmap/navigation_vode"-->
        <!--android:title="@string/navigation_vote" />-->
    <item
        android:id="@+id/navigation_mall"
        android:icon="@drawable/navigation_icon_selector_mall"
        android:title="@string/navigation_mall" />

    <item
        android:id="@+id/navigation_vip"
        android:icon="@drawable/navigation_icon_selector_vip"
        android:title="@string/navigation_vip" />

    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/navigation_icon_selector_find"
        android:title="@string/navigation_find" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/navigation_icon_selector_cart"
        android:title="@string/navigation_cart" />
    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/navigation_icon_selector_my"
        android:title="@string/navigation_my" />

</menu>