<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:navigationIcon="@mipmap/comm_left"
       >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/with_draw"
            android:drawablePadding="10dp"
            android:textColor="#373A42"
            android:textSize="17sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="18dp"
            android:text="保存"
            android:textColor="#EC4374"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="gone"/>

    </android.support.v7.widget.Toolbar>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <TextView
        android:text="提现余额"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="39dp"
        android:textSize="17sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        
    <EditText
        android:id="@+id/edit_money"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="39dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="￥"
        android:textSize="24sp"
        android:textColorHint="@color/text_black"
        android:textColor="@color/text_black"
        style="@style/MyEditText"/>

    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="39dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/text_content"
            android:text="余额："/>

        <TextView
            android:id="@+id/tv_yuer_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="0"
            android:textColor="@color/text_content"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/btn_all_withdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="全部提现"
            android:layout_marginLeft="30dp"
            android:padding="10dp"
            android:textSize="12sp"
            android:textColor="@color/mainColor"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="39dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/text_content"
            android:text="手续费："/>

        <TextView
            android:id="@+id/tv_fee_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="￥0"
            android:textColor="@color/text_content"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="个税："
            android:textColor="@color/text_content"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_person_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="￥0"
            android:textColor="@color/text_content"
            android:textSize="12sp" />


    </LinearLayout>


        <TextView
            android:id="@+id/tv_read"
            android:visibility="gone"
            android:layout_marginLeft="39dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/red"
            android:text="输入金额超过余额！"/>




    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="39dp"
        android:textColor="@color/text_black"
        android:text="到账方式"
        android:textSize="17sp"/>
        
    
    <RelativeLayout
        android:id="@+id/rl_wei_xin"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="39dp"
        android:layout_height="65dp">

        <ImageView
            android:id="@+id/img1"
            android:src="@mipmap/ic_weixin"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />

        <TextView
            android:text="微信"
            android:layout_toRightOf="@+id/img1"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:textColor="@color/text_black"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkbox_weixin"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:button="@null"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="48dp"
            android:clickable="false"
            android:background="@drawable/check_box_style"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_alignParentBottom="true"
            android:background="@color/line"
            android:layout_marginRight="31dp"/>
  </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_zfb"
        android:layout_width="match_parent"
        android:layout_marginLeft="39dp"
        android:layout_height="65dp">

        <ImageView
            android:id="@+id/img2"
            android:src="@mipmap/ic_zfb"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />

        <TextView
            android:text="支付宝"
            android:layout_toRightOf="@+id/img2"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:textColor="@color/text_black"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkbox_zfb"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:button="@null"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="48dp"
            android:clickable="false"
            android:background="@drawable/check_box_style"/>

    </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="提现说明："
            android:textColor="#ffafafaf"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="39dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="39dp"
            android:textSize="11sp"
            android:textColor="#AFAFAF"
            android:text="@string/tixian_guize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="其他说明："
            android:layout_marginLeft="39dp"
            android:textColor="#ffafafaf"
            android:textSize="14sp"
            />

        <TextView
            android:textColor="#afafaf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_marginLeft="39dp"
            android:text="@string/tixian_shuom"/>
    
    <Button
        android:id="@+id/btn_withdraw"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_main_btn"
        android:text="提现"
        android:textColor="@color/white"
        android:layout_marginBottom="25dp"
        android:textSize="14sp"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
</LinearLayout>