<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:navigationIcon="@mipmap/comm_left">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="10dp"
            android:text="邀请送仓币"
            android:textColor="#373A42"
            android:textSize="17sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="18dp"
            android:text="保存"
            android:textColor="#EC4374"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E8CCAD">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:minHeight="650dp"/>


            <!--我的邀请奖励-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/shape_pop_up">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingLeft="20dp"
                            android:text="我的邀请奖励"
                            android:background="#F4F4F4"
                            android:textColor="#333333"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="成功邀请"
                                    android:textColor="#AFAFAF"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/tv_num_people"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="3dp"
                                    android:text="0"
                                    android:textColor="#E11012"
                                    android:textSize="19sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="3dp"
                                    android:text="人"
                                    android:textColor="#E11012"
                                    android:textSize="12sp" />
                            </LinearLayout>
                        </RelativeLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="31dp"
                            android:background="@color/line" />

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="赚取"
                                    android:textColor="#AFAFAF"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/tv_num_money"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="3dp"
                                    android:text="0"
                                    android:textColor="#E11012"
                                    android:textSize="19sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="3dp"
                                    android:text="元"
                                    android:textColor="#E11012"
                                    android:textSize="12sp" />
                            </LinearLayout>
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--邀请攻略-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="150dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:text="邀请攻略"
                        android:textStyle="bold"
                        android:textColor="@color/text_black"
                        android:textSize="21sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <!--login_one-->
                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <LinearLayout
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <ImageView
                                    android:layout_gravity="center_horizontal"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@mipmap/ic_share_one" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="15dp"
                                    android:text="@string/share_one"
                                    android:textColor="@color/text_black" />
                            </LinearLayout>
                        </RelativeLayout>

                        <ImageView
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_share_jt"/>

                        <!--2-->
                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <LinearLayout
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <ImageView
                                    android:layout_gravity="center_horizontal"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@mipmap/ic_share_two" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="15dp"
                                    android:text="@string/share_two"
                                    android:textColor="@color/text_black" />
                            </LinearLayout>
                        </RelativeLayout>

                        <ImageView
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_share_jt"/>

                        <!--3-->
                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <LinearLayout
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <ImageView
                                    android:layout_gravity="center_horizontal"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@mipmap/ic_share_three" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="15dp"
                                    android:text="@string/share_three"
                                    android:textColor="@color/text_black" />
                            </LinearLayout>
                        </RelativeLayout>

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:background="#70000000">

        <ImageView
            android:id="@+id/btn_share"
            android:src="@mipmap/ic_save_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>

        <ImageView
            android:id="@+id/btn_yq_friends"
            android:src="@mipmap/ic_share_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>





</RelativeLayout>